# simulacra-rs

./: Cargo.toml
src/: application.rs  events.rs  input.rs  layers.rs  logger.rs  main.rs  renderer.rs  window.rs
src/renderer/: context.rs  shader.rs
src/window/: glfw.rs
