[package]
name = "simulacra"
version = "0.1.0"
authors = ["Andrea Marino <am.marinoandrea@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11.0"
glfw = "0.41"
gl = "0.14.0"

[build-dependencies]
gl_generator = "0.14.0"
khronos_api = "3.1.0"
